# beautiful-asserts

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/beautiful_asserts/: asgi.py  forms.py  manage.py  models.py  urls.py  views.py  wsgi.py
src/beautiful_asserts/migrations/: 0001_initial.py
src/beautiful_asserts/settings/: __init__.py  base.py
src/beautiful_asserts/templates/: base.html
src/beautiful_asserts/templates/beautiful_asserts/: article_form.html  article_list.html
tests/: conftest.py
tests/functional/: test_views.py
tests/unit/: test_forms.py
